--- a/d-/styl/grid.styl
+++ b/d-/styl/grid.styl
@@ -27,6 +27,8 @@
   float: left;
   padding-left:0;
 }
+
+
 _col(xs,3,width);
 _col(xs-pull,3,right);
 _col(xs-push,3,left);
@@ -58,5 +60,5 @@ _col(xs-offset,3,margin-left);
   _col(lg-push,3,left);
   _col(lg-offset,3,margin-left);
 }
+_col_height(2);
 
-/*flex网格*/
