--- a/d-/css/basics.css
+++ b/d-/css/basics.css
@@ -53,8 +53,28 @@
   padding-left: 0;
 }
 .d-width-8 {
-  width: 8px;
+  width: 8px !important;
 }
 .d-width-20 {
   width: 20px;
+}
+.d-fill {
+  object-fit: fill;
+  height: 100%;
+}
+.d-contain {
+  object-fit: contain;
+  height: 100%;
+}
+.d-cover {
+  object-fit: cover;
+  height: 100%;
+}
+.d-none {
+  object-fit: none;
+  height: 100%;
+}
+.d-scale-down {
+  object-fit: scale-down;
+  height: 100%;
 }
