--- a/d-/css/flex.css
+++ b/d-/css/flex.css
@@ -15,6 +15,10 @@
   -webkit-justify-content: space-between;
   justify-content: space-between;
 }
+.d-justify-content-c {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
 .d-justify-content-end {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
