--- a/d-/css/grid.css
+++ b/d-/css/grid.css
@@ -87,67 +87,54 @@
 .d-col-xs-0 {
   width: 0%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-1 {
   width: 8.333333333333334%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-2 {
   width: 16.666666666666668%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-3 {
   width: 25%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-4 {
   width: 33.333333333333336%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-5 {
   width: 41.66666666666667%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-6 {
   width: 50%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-7 {
   width: 58.333333333333336%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-8 {
   width: 66.66666666666667%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-9 {
   width: 75%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-10 {
   width: 83.33333333333334%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-11 {
   width: 91.66666666666667%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-12 {
   width: 100%;
   padding: 0.125rem;
-  padding-left: 0px;
 }
 .d-col-xs-pull-0 {
   right: 0%;
@@ -284,67 +271,54 @@
   .d-col-sm-0 {
     width: 0%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-1 {
     width: 8.333333333333334%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-2 {
     width: 16.666666666666668%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-3 {
     width: 25%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-4 {
     width: 33.333333333333336%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-5 {
     width: 41.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-6 {
     width: 50%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-7 {
     width: 58.333333333333336%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-8 {
     width: 66.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-9 {
     width: 75%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-10 {
     width: 83.33333333333334%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-11 {
     width: 91.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-12 {
     width: 100%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-sm-pull-0 {
     right: 0%;
@@ -482,67 +456,54 @@
   .d-col-md-0 {
     width: 0%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-1 {
     width: 8.333333333333334%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-2 {
     width: 16.666666666666668%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-3 {
     width: 25%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-4 {
     width: 33.333333333333336%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-5 {
     width: 41.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-6 {
     width: 50%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-7 {
     width: 58.333333333333336%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-8 {
     width: 66.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-9 {
     width: 75%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-10 {
     width: 83.33333333333334%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-11 {
     width: 91.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-12 {
     width: 100%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-md-pull-0 {
     right: 0%;
@@ -680,67 +641,54 @@
   .d-col-lg-0 {
     width: 0%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-1 {
     width: 8.333333333333334%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-2 {
     width: 16.666666666666668%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-3 {
     width: 25%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-4 {
     width: 33.333333333333336%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-5 {
     width: 41.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-6 {
     width: 50%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-7 {
     width: 58.333333333333336%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-8 {
     width: 66.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-9 {
     width: 75%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-10 {
     width: 83.33333333333334%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-11 {
     width: 91.66666666666667%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-12 {
     width: 100%;
     padding: 0.125rem;
-    padding-left: 0px;
   }
   .d-col-lg-pull-0 {
     right: 0%;
@@ -860,4 +808,42 @@
     margin-left: 100%;
   }
 }
-/*flex网格*/
+.d-col-height-0 {
+  height: 0vw;
+}
+.d-col-height-1 {
+  height: 8.333333333333334vw;
+}
+.d-col-height-2 {
+  height: 16.666666666666668vw;
+}
+.d-col-height-3 {
+  height: 25vw;
+}
+.d-col-height-4 {
+  height: 33.333333333333336vw;
+}
+.d-col-height-5 {
+  height: 41.66666666666667vw;
+}
+.d-col-height-6 {
+  height: 50vw;
+}
+.d-col-height-7 {
+  height: 58.333333333333336vw;
+}
+.d-col-height-8 {
+  height: 66.66666666666667vw;
+}
+.d-col-height-9 {
+  height: 75vw;
+}
+.d-col-height-10 {
+  height: 83.33333333333334vw;
+}
+.d-col-height-11 {
+  height: 91.66666666666667vw;
+}
+.d-col-height-12 {
+  height: 100vw;
+}
