--- a/d-/styl/basics.styl
+++ b/d-/styl/basics.styl
@@ -54,8 +54,17 @@
 	padding-left:0;
 }
 .{$pf}width-8{
-  width:8px;
+  width:8px !important;
 }
 .{$pf}width-20{
   width:20px;
 }
+.{$pf}grid-badge{
+
+}
+
+.{$pf}fill {object-fit: fill; height:100% }
+.{$pf}contain { object-fit: contain; height:100%}
+.{$pf}cover { object-fit: cover;height:100% }
+.{$pf}none { object-fit: none;height:100% }
+.{$pf}scale-down { object-fit: scale-down; height:100%}
