--- a/d-/styl/flex.styl
+++ b/d-/styl/flex.styl
@@ -17,6 +17,10 @@
   -webkit-justify-content:space-between;
   justify-content:space-between;
   }
+  .{$pf}justify-content-c{
+  -webkit-justify-content:center;
+  justify-content:center;
+  }
   .{$pf}justify-content-end{
   -webkit-justify-content:flex-end;
   justify-content:flex-end;
@@ -68,7 +72,6 @@
   float: left;
   box-sizing: border-box;
   width: 100%;}
-
 .{$pf}flex-col-10 {
   width: 10%; }
 
