--- a/d-/styl/header.styl
+++ b/d-/styl/header.styl
@@ -38,8 +38,8 @@
 	width:100%
 }
 .{$pf}nav button{
-	height: 1.5rem;
-    line-height: 1.5rem;
+	// height: 1.5rem;
+    line-height: 1.3rem;
     min-width: 2.75rem; 
     text-align: center;
     font-size: 15px;
@@ -77,7 +77,7 @@
 .{$pf}nav-badge{
     position: absolute;
     top: 0;
-    left:2.9rem;
+    left:53%;
     font-size: 0.5rem;
     color: #fff;
     background-color: #ff2600;
@@ -87,6 +87,36 @@
     padding: 0 0.15rem;
     line-height: 0.8rem;
 }
+.{$pf}nav-btn button{
+    background-color: #18b4ed !important;
+    color: #fdfdfd !important;
+    border-radius: 0;
+      border: 1px solid #fff;
+    
+}
 .{$pf}nav-r{
   position:relative;
+}
+.{$pf}btn-nav-l{   
+    border-right: 0 !important;
+    border-bottom-left-radius: 0.75rem !important;
+    border-top-left-radius: 0.75rem !important;
+  
+   
+}
+.{$pf}btn-nav-r{   
+    
+    border-bottom-right-radius: 0.75rem !important;
+    border-top-right-radius: 0.75rem !important;
+  
+}
+.{$pf}btn-nav-img{
+  position: absolute;
+    left: 10px;
+    
+}
+.{$pf}nav-btn button:active{
+    background-color:#fdfdfd !important;
+    color: #18b4ed !important;
+    
 }
