--- a/d-/styl/basics.styl
+++ b/d-/styl/basics.styl
@@ -68,3 +68,7 @@
 .{$pf}cover { object-fit: cover;height:100% }
 .{$pf}none { object-fit: none;height:100% }
 .{$pf}scale-down { object-fit: scale-down; height:100%}
+.{$pf}position-a{
+       position absolute;
+       
+}
