--- a/d-/styl/card.styl
+++ b/d-/styl/card.styl
@@ -19,15 +19,17 @@
 	    padding: 0.5rem 0.75rem;
 	    -webkit-box-sizing: border-box;
 	    box-sizing: border-box;
+	  
 	}
 }
-
+.{$pf}card-footer{
+	 padding: 0 0.75rem !important;
+	  line-height 2.2rem;
+}
 .{$pf}card-content-img{
         padding:0 !important;
 }
-.{$pf}card-list p{
-	margin-bottom:.4rem;
-}
+
 .{$pf}card-list .{$pf}card-list-inner{
 	margin-left:0.5rem
 }
