--- a/d-/css/card.css
+++ b/d-/css/card.css
@@ -17,11 +17,12 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+.d-card-footer {
+  padding: 0 0.75rem !important;
+  line-height: 2.2rem;
+}
 .d-card-content-img {
   padding: 0 !important;
-}
-.d-card-list p {
-  margin-bottom: 0.4rem;
 }
 .d-card-list .d-card-list-inner {
   margin-left: 0.5rem;
