--- a/d-/styl/flex.styl
+++ b/d-/styl/flex.styl
@@ -8,10 +8,16 @@
   display: flex; 
 }
 .{$pf}flex{
-  display: -webkit-box;
-  display: -webkit-flex; 
-  display: flex; 
+  // display: -webkit-box;
+  // display: -webkit-flex; 
+  // display: flex; 
+    display:-webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex; 
 }
+
 
 .{$pf}justify-content{
   -webkit-justify-content:space-between;
