--- a/d-/styl/style.styl
+++ b/d-/styl/style.styl
@@ -33,7 +33,7 @@ body {
 	background-color: #f5f5f5;
 	outline: 0;
 }
-html,body,header,section,footer,div,ul,ol,li,img,a,span,em,del,legend,center,strong,var,fieldset,form,label,dl,dt,dd,cite,input,hr,time,mark,code,figcaption,figure,textarea,h1,h2,h3,h4,h5,h6,p{
+html,body,header,section,footer,div,ul,ol,li,img,a,span,em,del,legend,center,strong,var,fieldset,form,label,dl,dt,dd,cite,input,hr,time,mark,code,figcaption,figure,textarea,h1,h2,h3,h4,h5,h6,p,button{
 	margin:0;
 	border:0;
 	padding:0;
