--- a/d-/styl/basics.styl
+++ b/d-/styl/basics.styl
@@ -20,6 +20,9 @@
 .{$pf}margin-l-10{
 	margin-left:0.5rem;
 }
+.{$pf}margin-l-2-half{
+	margin-left:0.125rem;
+}
 .{$pf}margin-r-10{
 	margin-right:0.5rem;
 }
@@ -71,4 +74,7 @@
 .{$pf}position-a{
        position absolute;
        
+}
+.{$pf}line-h{
+	line-height 1.45rem;
 }
