--- a/d-/styl/list.styl
+++ b/d-/styl/list.styl
@@ -55,13 +55,15 @@
     text-overflow: ellipsis;
     -webkit-box-orient: vertical;
     display: -webkit-box;
-    padding-bottom:0.25rem
+    padding-left:0.125rem;
 }
 .{$pf}list-txt-clamp-2{
     -webkit-line-clamp: 2;
+    line-clamp: 2;
 }
 .{$pf}list-txt-clamp-3{
     -webkit-line-clamp: 3;
+    line-clamp: 3;
 }
 .{$pf}list li:active{
     background-color:#eee;
