--- a/d-/css/base.css
+++ b/d-/css/base.css
@@ -23,7 +23,6 @@ body {
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  -webkit-user-select: none;
   width: 100%;
 }
 body {
@@ -91,7 +90,6 @@ h6 {
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-user-select: none;
   -webkit-tap-highlight-color: transparent;
   outline: none;
 }
@@ -114,8 +112,8 @@ a:active {
   color: #f2f2f2;
 }
 textarea {
-  overflow: hidden;
   resize: none; /*不让用户缩放*/
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 button {
   overflow: visible;
@@ -247,7 +245,7 @@ img {
 }
 .d-label {
   display: inline-block;
-  padding: 0.3em 0.35em;
+  padding: 0.25rem;
   font-size: 0.6rem;
   line-height: 1;
   color: #616161;
@@ -255,7 +253,7 @@ img {
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline; /*默认。元素放置在父元素的基线上。*/
-  border-radius: 0.15em;
+  border-radius: 0.15rem;
 }
 .d-label-primary {
   color: #fff;
@@ -343,6 +341,9 @@ h6,
 }
 .d-txt-primary {
   color: #00a5e0;
+}
+.d-txt-10 {
+  font-size: 0.5rem;
 }
 .d-shadow-1 {
   -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
@@ -474,6 +475,9 @@ h6,
   display: -webkit-flex;
   display: flex;
 }
+.d-align-items-c {
+  align-items: center;
+}
 .d-justify-content {
   -webkit-justify-content: space-between;
   justify-content: space-between;
@@ -508,21 +512,27 @@ h6,
 }
 .d-flex-pack-start {
   -webkit-box-pack: start;
+  box-pack: start;
 }
 .d-flex-pack-end {
   -webkit-box-pack: end;
+  box-pack: end;
 }
 .d-flex-pack-center {
   -webkit-box-pack: center;
+  box-pack: center;
 }
 .d-flex-align-start {
   -webkit-box-align: start;
+  box-align: center;
 }
 .d-flex-align-end {
   -webkit-box-align: end;
+  box-align: end;
 }
 .d-flex-align-center {
   -webkit-box-align: center;
+  box-align: center;
 }
 .d-flex-row {
   display: block;
@@ -1157,13 +1167,15 @@ h6,
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
   display: -webkit-box;
-  padding-bottom: 0.25rem;
+  padding-left: 0.125rem;
 }
 .d-list-txt-clamp-2 {
   -webkit-line-clamp: 2;
+  line-clamp: 2;
 }
 .d-list-txt-clamp-3 {
   -webkit-line-clamp: 3;
+  line-clamp: 3;
 }
 .d-list li:active {
   background-color: #eee;
@@ -1244,15 +1256,15 @@ h6,
 .d-nav-badge {
   position: absolute;
   top: 0;
-  left: 53%;
+  left: 51%;
   font-size: 0.5rem;
   color: #fff;
   background-color: #ff2600;
   border-radius: 0.4rem;
   display: inline-block;
-  height: 0.8rem;
-  padding: 0 0.15rem;
+  padding: 0 0.125rem;
   line-height: 0.8rem;
+  text-align: center;
 }
 .d-nav-btn {
   position: fixed;
@@ -2313,6 +2325,9 @@ h6,
 .d-margin-l-10 {
   margin-left: 0.5rem;
 }
+.d-margin-l-2-half {
+  margin-left: 0.125rem;
+}
 .d-margin-r-10 {
   margin-right: 0.5rem;
 }
@@ -2374,4 +2389,7 @@ h6,
 }
 .d-position-a {
   position: absolute;
+}
+.d-line-h {
+  line-height: 1.45rem;
 }
