--- a/d-/css/header.css
+++ b/d-/css/header.css
@@ -74,15 +74,15 @@
 .d-nav-badge {
   position: absolute;
   top: 0;
-  left: 53%;
+  left: 51%;
   font-size: 0.5rem;
   color: #fff;
   background-color: #ff2600;
   border-radius: 0.4rem;
   display: inline-block;
-  height: 0.8rem;
-  padding: 0 0.15rem;
+  padding: 0 0.125rem;
   line-height: 0.8rem;
+  text-align: center;
 }
 .d-nav-btn {
   position: fixed;
