--- a/d-/css/label.css
+++ b/d-/css/label.css
@@ -1,6 +1,6 @@
 .d-label {
   display: inline-block;
-  padding: 0.3em 0.35em;
+  padding: 0.25rem;
   font-size: 0.6rem;
   line-height: 1;
   color: #616161;
@@ -8,7 +8,7 @@
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline; /*默认。元素放置在父元素的基线上。*/
-  border-radius: 0.15em;
+  border-radius: 0.15rem;
 }
 .d-label-primary {
   color: #fff;
