--- a/d-/css/style.css
+++ b/d-/css/style.css
@@ -23,7 +23,6 @@ body {
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  -webkit-user-select: none;
   width: 100%;
 }
 body {
@@ -91,7 +90,6 @@ h6 {
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-user-select: none;
   -webkit-tap-highlight-color: transparent;
   outline: none;
 }
@@ -114,8 +112,8 @@ a:active {
   color: #f2f2f2;
 }
 textarea {
-  overflow: hidden;
   resize: none; /*不让用户缩放*/
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 button {
   overflow: visible;
