--- a/d-/styl/label.styl
+++ b/d-/styl/label.styl
@@ -2,7 +2,7 @@
 @import 'mixin.styl'
 .{$pf}label {
 	display: inline-block;
-	padding: 0.3em 0.35em;
+	padding: 0.25rem;
 	font-size: 0.6rem;
 	line-height: 1;
 	color: #616161;
@@ -10,7 +10,7 @@
 	text-align: center;
 	white-space: nowrap;
 	vertical-align: baseline;/*默认。元素放置在父元素的基线上。*/
-	border-radius: 0.15em;
+	border-radius: 0.15rem;
 }
 .{$pf}label-primary {
 	_label_($text-color,#00bcd4);
