--- a/d-/styl/style.styl
+++ b/d-/styl/style.styl
@@ -23,7 +23,7 @@ html,body {
 	-webkit-touch-callout:none;
 	-webkit-text-size-adjust:none;
 	-webkit-tap-highlight-color:rgba(0, 0, 0, 0);
-	-webkit-user-select:none;
+	// -webkit-user-select:none;
 	width: 100%;
 }
 body {
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 * {
 	-webkit-box-sizing: border-box;
 	      	box-sizing: border-box;
-	-webkit-user-select: none;
+	// -webkit-user-select: none;
 	-webkit-tap-highlight-color: transparent;
 	outline: none;
 }
@@ -70,8 +70,8 @@ a:active{
 }
 
 textarea {
-	overflow: hidden;
 	resize: none;/*不让用户缩放*/
+	-webkit-tap-highlight-color:rgba(0,0,0,0)
 }
 button {
 	overflow: visible;
