--- a/d-/css/grid.css
+++ b/d-/css/grid.css
@@ -847,3 +847,8 @@
 .d-col-height-12 {
   height: 100vw;
 }
+.d-grid-link:active {
+  background-color: #fdfdfd;
+  width: 50%;
+  margin: 0 auto;
+}
