--- a/d-/styl/grid.styl
+++ b/d-/styl/grid.styl
@@ -61,4 +61,9 @@ _col(xs-offset,3,margin-left);
   _col(lg-offset,3,margin-left);
 }
 _col_height(2);
+.{$pf}grid-link:active{
+      background-color:#fdfdfd;
+      width:50%;
+      margin:0 auto;
+}
 
