--- a/d-/styl/basics.styl
+++ b/d-/styl/basics.styl
@@ -47,6 +47,9 @@
 .{$pf}padding-r-10{
 	padding-right:0.5rem;
 }
+.{$pf}padding-lr-10{
+  padding:0 0.5rem;
+}
 .{$pf}padding-l-10{
 	padding-left:0.5rem;
 }
@@ -55,6 +58,21 @@
 }
 .{$pf}padding-l-0{
 	padding-left:0;
+}
+.{$pf}padding-tb-20{
+	padding:1rem 0;
+}
+.{$pf}padding-t-10{
+  padding-top:0.5rem;
+}
+.{$pf}padding-t-20{
+  padding-top:1rem;
+}
+.{$pf}padding-tb-5{
+  padding:0.25rem 0;
+}
+.{$pf}padding-tb-10{
+  padding:0.5rem 0;
 }
 .{$pf}width-8{
   width:8px !important;
@@ -75,6 +93,25 @@
        position absolute;
        
 }
+.{$pf}position-r{
+       position:relative;
+       
+}
 .{$pf}line-h{
 	line-height 1.45rem;
+}
+.{$pf}position-icon{
+	position absolute;
+	 top:0px;
+    left:0.5rem;
+    color: #666;	
+}
+.{$pf}margin-auto{
+       margin:0 auto;
+       
+}
+.{$pf}position-more{
+  position: absolute;
+    bottom: 0.5rem;
+    left: 31%;
 }
