--- a/d-/styl/search.styl
+++ b/d-/styl/search.styl
@@ -6,8 +6,8 @@
     height: 2.2rem;
     overflow: hidden;
     width: 100%;
-    background-color: #ebeced;
-    color: #9e9e9e;
+    // background-color: #ebeced;
+    // color: #9e9e9e;
     -webkit-backface-visibility: hidden;/*隐藏被旋转的 div 元素的背面：*/
     backface-visibility: hidden;
 	}
@@ -33,6 +33,7 @@
 			background: #fff;
 			border:0px;	
 			outline: none;
+			padding-left:1rem;
 	}
 	
 .{$pf}search .cancel{
